# WikiRace

./: .gitignore  CMakeLists.txt  README.md  a.out  binManagement.cpp  binManagement.hpp  bin_index.txt  graph.cpp  graph.hpp  main.cpp  markIsms.cpp  traversals.cpp  traversals.hpp  window.cpp  window.hpp
articles/: bin467.txt
utils/: articleSeparator.cpp  fileReduction.cpp  indexFile.cpp
